--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-svgicons2svgfontforweb",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "Create a SVG font from several SVG icons",
   "main": "src/index.js",
   "scripts": {
@@ -34,31 +34,20 @@
     }
   ],
   "dependencies": {
-    "gulp-util": "~2.2.19",
-    "svgicons2svgfontforweb": "0.1.1",
-    "readable-stream": "^1.0.27-1"
+    "gulp-util": "~3.0.1",
+    "svgicons2svgfontforweb": "0.1.4",
+    "readable-stream": "^1.0.32"
   },
   "devDependencies": {
-    "mocha": "~1.20.1",
-    "event-stream": "~3.1.5",
+    "mocha": "~1.21.4",
+    "event-stream": "~3.1.7",
     "mocha-lcov-reporter": "0.0.1",
-    "coveralls": "~2.10.1",
-    "istanbul": "~0.2.13",
-    "gulp": "~3.8.5",
+    "coveralls": "~2.11.2",
+    "istanbul": "~0.3.2",
+    "gulp": "~3.8.8",
     "rimraf": "2.2.8",
-    "svgicons2svgfontforweb": "0.1.1",
-    "gulp-util": "~2.2.19"
+    "svgicons2svgfontforweb": "0.1.4",
+    "gulp-util": "~3.0.1"
   },
-  "maintainers": [
-    {
-      "name": "nfroidure",
-      "email": "nfroidure@elitwork.com"
-    },
-    {
-      "name": "leeqqiang",
-      "url": "https://github.com/leeqqiang"
-    }
-  ],
-  "directories": {},
   "readme": "based on gulp-svgicons2svgfont"
 }
